--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Sushen</h1>
-									<p>This is <strong>my story</strong>, if you alrady know me and want to contact with me.Set an <a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/" target="_blank">Appionment</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<p>This is <strong>my story</strong>, if you alrady know me and want to contact with me.Set an <a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/" target="_blank">Appionment</a>. I am showcasing myself in this web. We will find <a href="#" target="_blank">My contact</a>,<a href="#" target="_blank"> My Workflow,</a> and my possible devloper story in here. Hepe You injoy it. :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -38,16 +38,16 @@
 								<section class="panel color4-alt">
 									<div class="intro color4">
 										<h2 class="major">Contact</h2>
-										<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+										<p>Facebook Appionbent is the best way for contacting me. I regularly chake it.It Will be batter if you contact me that way. I expose my email on my github.I rerularly make post on my bolg you can cheak it also. </p>
 									</div>
 									<div class="inner columns divided">
 										<div class="span-1-5">
 											<ul class="contact-icons color1">
-												<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/">Sushen Biswas</a></li>
+												<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/">fb/Sushen Biswas</a></li>
 												<li class="icon brands fa-twitter"><a href="https://twitter.com/BiswasSushen">@BiswasSushen</a></li>
-												<li class="icon brands fab fa-github"><a href="https://github.com/sushen"github.com/sushen</a></li>
-												<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-												<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+												<li class="icon brands fab fa-github"><a href="https://github.com/sushen">github.com/sushen</a></li>
+												<li class="icon brands fab fa-wordpress"><a href="http://biswas.video.blog/">Sushen Biswas Blog</a></li>
+												<li class="icon brands fab fa-instagram"><a href="https://www.instagram.com/sushen.biswas/">insta/sushen.biswas</a></li>
 											</ul>
 										</div>
 									</div>
@@ -67,7 +67,7 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
+									<h2 class="major">My CD/CI Worlfow</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="inner">
