--- a/index.html
+++ b/index.html
@@ -118,6 +118,28 @@
 								</div>
 							</section>
 
+							<section class="panel">
+								<div class="intro color2">
+									<h2 class="major">My chatbot</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+								</div>
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+								</div>
+							</section>
+
 						<!-- Panel -->
 							<!-- <section class="panel color4-alt">
 								<div class="intro color4">
@@ -180,34 +202,72 @@
 										<h6>Heading Level 6</h6>
 
 									</div>
-									<div class="span-3">
+									<div class="span-2-75">
 
-										<h4>Blockquote</h4>
-										<blockquote>Lorem ipsum dolor sit amet. Felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in vestibulum. Blandit adipiscing eu iaculis volutpat ac adipiscing volutpat ac adipiscing faucibus.</blockquote>
+										<h3 class="major">ICCBM</h3>
+										<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+										This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+										This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
 
-										<h4>Preformatted</h4>
-										<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + (i++);
-    deck.shuffle();
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+										<h1>Heading Level 1</h1>
+										<h2>Heading Level 2</h2>
+										<h3>Heading Level 3</h3>
+										<h4>Heading Level 4</h4>
+										<h5>Heading Level 5</h5>
+										<h6>Heading Level 6</h6>
 
 									</div>
+
+									<div class="span-3">
+
+										<h4>Some Thing To Remember</h4>
+										<blockquote>The city is planed by me. what city?  I know, I know well some day you will!</blockquote>
+
+										<h4>My Life Mathamaicks</h4>
+										<pre><code>Daily_Hours = 8
+										</br>Per_Week_Days = 5
+										</br>Total_Hours_in_a_week = Daily_Hours * Per_Week_Days
+										</br>#print(Total_Hours_in_a_week)
+										</br>Total_Hours_in_a_Month = Total_Hours_in_a_week * 4
+										</br>#print(Total_Hours_in_a_Month)
+										</code>
+										</pre>
+										</div>
+
+										<div class="span-2-75">
+											<pre><code>
+											</br>Total_Hours_in_a_Years = Total_Hours_in_a_Month * 12
+											</br>#print(Total_Hours_in_a_Years)
+											</br>How_Long_Years_You_will_Work = 56 - 26
+											</br>#print(How_Long_Years_You_will_Work)
+											</br>How_Long_Hours_You_Have_to_Work = How_Long_Years_You_will_Work * Total_Hours_in_a_Years
+											</br>#print(How_Long_Hours_You_Have_to_Work)
+											</code>
+											</pre>
+										</div>
+										<div class="span-2-75">
+											<pre><code>
+											</br>You_will_spend_How_Much_day = How_Long_Hours_You_Have_to_Work / 24
+											</br>#print(You_will_spend_How_Much_day)
+											</br>You_will_spend_How_Much_Month = You_will_spend_How_Much_day /30
+											</br>#print(You_will_spend_How_Much_Month)
+											</br>You_will_spend_How_Much_Years = You_will_spend_How_Much_Month/12
+											</br>print("Total " + str(You_will_spend_How_Much_Years) + " years you have to work if you do a 8 hours daily job.")
+											</code>
+											</pre>
+										</div>
 									<div class="span-1-25">
 
-										<h3 class="major">Lists</h3>
+										<h3 class="major">Idea</h3>
 
-										<h4>Unordered</h4>
+										<h4>Sold</h4>
 										<ul>
 											<li>Lorem ipsum dolor sit.</li>
 											<li>Dolor pulvinar etiam.</li>
 											<li>Etiam vel felis viverra.</li>
 										</ul>
 
-										<h4>Alternate</h4>
+										<h4>Ready for Sell</h4>
 										<ul class="alt">
 											<li>Lorem ipsum dolor sit.</li>
 											<li>Dolor pulvinar etiam.</li>
@@ -227,7 +287,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li>Etiam vel felis lorem.</li>
 										</ol>
 
-										<h4>Actions</h4>
+										<h4>Currently Working</h4>
 										<ul class="actions">
 											<li><a href="#" class="button primary color2">Default</a></li>
 											<li><a href="#" class="button">Default</a></li>
@@ -240,7 +300,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</div>
 									<div class="span-1-25">
 
-										<h4>Icons</h4>
+										<h4>My Socal Business</h4>
 										<ul class="icons">
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -249,7 +309,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 										</ul>
 
-										<h4>Contact Icons</h4>
+										<h4>Socal Business I manage</h4>
 										<ul class="contact-icons color2">
 											<li class="icon brands fa-twitter"><a href="#">Twitter</a></li>
 											<li class="icon brands fa-facebook-f"><a href="#">Facebook</a></li>
@@ -260,8 +320,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 									</div>
 									<div class="span-3">
-										<h3 class="major">Table</h3>
-										<h4>Default</h4>
+										<h3 class="major">Woeking Project List</h3>
+										<h4>Recently Closed</h4>
 										<div class="table-wrapper">
 											<table>
 												<thead>
@@ -303,7 +363,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</div>
 									</div>
 									<div class="span-3">
-										<h4>Alternate</h4>
+										<h4>Past Project List</h4>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -350,7 +410,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</div>
 									</div>
 									<div class="span-2-25">
-										<h3 class="major">Buttons</h3>
+										<h3 class="major">Pose Work</h3>
 										<ul class="actions">
 											<li><a href="#" class="button primary color2">Primary</a></li>
 											<li><a href="#" class="button">Default</a></li>
@@ -374,57 +434,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</ul>
 									</div>
 									<div class="span-4-5">
-										<h3 class="major">Form</h3>
-										<form method="post" action="#">
-											<div class="fields">
-												<div class="field third">
-													<label for="demo-name">Name</label>
-													<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-												</div>
-												<div class="field third">
-													<label for="demo-email">Email</label>
-													<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-												</div>
-												<div class="field third">
-													<label for="demo-category">Category</label>
-													<div class="select-wrapper">
-														<select name="demo-category" id="demo-category">
-															<option value="">-</option>
-															<option value="1">Manufacturing</option>
-															<option value="1">Shipping</option>
-															<option value="1">Administration</option>
-															<option value="1">Human Resources</option>
-														</select>
-													</div>
-												</div>
-												<div class="field quarter">
-													<input type="radio" id="demo-priority-low" name="demo-priority" class="color2" checked />
-													<label for="demo-priority-low">Low Priority</label>
-												</div>
-												<div class="field quarter">
-													<input type="radio" id="demo-priority-high" name="demo-priority" class="color2" />
-													<label for="demo-priority-high">High Priority</label>
-												</div>
-												<div class="field quarter">
-													<input type="checkbox" id="demo-copy" name="demo-copy" class="color2" />
-													<label for="demo-copy">Email a copy</label>
-												</div>
-												<div class="field quarter">
-													<input type="checkbox" id="demo-human" name="demo-human" class="color2" checked />
-													<label for="demo-human">Not a robot</label>
-												</div>
-												<div class="field">
-													<label for="demo-message">Message</label>
-													<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="2"></textarea>
-												</div>
-											</div>
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="primary color2" /></li>
-												<li><input type="reset" value="Reset" /></li>
-											</ul>
-										</form>
-									</div>
-								</div>
+										<h3 class="major">Thank You</h3>
+
+								<p>It a  <b>honor</b> to be with you. <strong>Time</strong>. is very  <i>Expensive</i> and you spend <em>real value</em>.
+								if any of this being<sup>helpfull</sup> or anything <sub>attract</sub> you.
+								Communicket <u>with me</u> and Be my gest: <code>and (;;) { ... }</code>. Finally, my  <a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/">Appionment </a>link again.</p>
+
 							</section>
 
 						<!-- Copyright -->
