--- a/index.html
+++ b/index.html
@@ -441,6 +441,29 @@
 								Communicket <u>with me</u> and Be my gest: <code>and (;;) { ... }</code>. Finally, my  <a href="https://www.facebook.com/Sushen.Biswas.Creative.Director/appointments/">Appionment </a>link again.</p>
 
 							</section>
+							<!-- Panel -->
+								<section class="panel color2-alt">
+									<div class="intro color2">
+										<h2 class="major">Investment</h2>
+										<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam. </p>
+									</div>
+									<div class="inner columns aligned">
+										<div class="span-2-75">
+
+											<h3 class="major">Nadia Furniture</h3>
+											<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+											This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+											This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+
+											<h1>Heading Level 1</h1>
+											<h2>Heading Level 2</h2>
+											<h3>Heading Level 3</h3>
+											<h4>Heading Level 4</h4>
+											<h5>Heading Level 5</h5>
+											<h6>Heading Level 6</h6>
+
+										</div>
+
 
 						<!-- Copyright -->
 							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
