--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
 									</div>
 									<div class="span-3">
-										<h3 class="major">Woeking Project List</h3>
+										<h3 class="major">Working Project List</h3>
 										<h4>Recently Closed</h4>
 										<div class="table-wrapper">
 											<table>
@@ -334,7 +334,7 @@
 												<tbody>
 													<tr>
 														<td>Item One</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
+														<td><a href="https://lptb.herokuapp.com/"target="_blank">Learn Python Logether Bat</a></td>
 														<td>29.99</td>
 													</tr>
 													<tr>
